# pico-tools

./: Cargo.toml  LICENSE  README.md
example/: Cargo.toml  README.md  memory.x  rust-toolchain.toml
example/.cargo/: config.toml
example/src/: main.rs
pico-cdc/: Cargo.toml  README.md
pico-cdc/src/: lib.rs
pico-uf2/: Cargo.toml  LICENSE  README.md
pico-uf2/src/: main.rs
pico-uf2/src/app/: cdc.rs  elf.rs  elf_to_uf2.rs  mod.rs  uf2.rs
src/: cdc copy.rs  elf.rs  elf_to_uf2.rs  main.rs
src/app/: cli.rs  elf_to_uf2.rs  mod.rs
