[package]
name = "example"
edition = "2021"


[dependencies]
cortex-m-rt = "0.7.3"

embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = { version = "0.3.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.0" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt-rtt = "0.4"
rp2040-hal = "0.11.0"
rp235x-hal = "0.3.0"
pico-cdc = {path = "../pico-cdc"}