[package]
name = "pico-cdc"
description = "elf to uf2, Automatically restart to enter BootSLE"
edition = "2021"
authors = ["Jaydar Jaydar@Outlook.com"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/Jaydar/pico-tools/pico-cdc"
homepage = "https://github.com/Jaydar/pico-tools"
documentation = "https://docs.rs/pico-cdc"


[dependencies]
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = { version = "0.3.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.2.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.0" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
# defmt = "0.3"
defmt-rtt = "0.4"
rp2040-hal = "0.10.2"