[package]
name = "pico-uf2"
description = "elf to uf2, Automatically restart to enter BootSLE"
authors = ["Jaydar J<Jaydar@Outlook.com>"]
version = "1.0.1"

edition = "2021"
license = "MIT"
readme = "README.md"

repository = "https://github.com/Jaydar/pico-tools/tree/master/pico-uf2"
homepage = "https://github.com/Jaydar/pico-tools"
documentation = "https://docs.rs/pico-uf2"

publish = true

[dependencies]
assert_into = "1.1"
clap = { version = "4", features = ["derive"] }
once_cell = "1.5"
pbr = "1"
serialport = { version = "4", optional = true }
static_assertions = "1"
sysinfo = "0.29"
zerocopy = { version = "0.7", features = ["derive"] }

[features]
default = ["serial"]
serial = ["serialport"]
