[package]
name = "pico-uf2"
description = "elf to uf2, Automatically restart to enter BootSLE"
authors = ["Jaydar J<Jaydar@Outlook.com>"]
version = "1.0.2"

edition = "2021"
license = "MIT"
readme = "README.md"

repository = "https://github.com/Jaydar/pico-tools/tree/master/pico-uf2"
homepage = "https://github.com/Jaydar/pico-tools"
documentation = "https://docs.rs/pico-uf2"

publish = true

[dependencies]
assert_into = "1.1"
clap = { version = "4.5.16", features = ["derive"] }
pbr = "1"
serialport = {version = "4.5.0", optional = true}
static_assertions = "1"
sysinfo = "0.31.3"
zerocopy = { version = "0.7.35", features = ["derive"] }

[features]
default = ["serial"]
serial = ["serialport"]
